--- a/templates/index.html
+++ b/templates/index.html
@@ -250,7 +250,7 @@
             <div class="contact-details">
                 <div class="contact-item">
                     <i class="fas fa-envelope"></i>
-                    <a href="mailto:madhuri.inaguri@gmail.com" id="emailContact" class="editable">Mail</a>
+                    <a href="mailto:nuthanchoudari@gmail.com" id="emailContact" class="editable">Mail</a>
                 </div>
                 <div class="contact-item">
                     <i class="fab fa-linkedin"></i>
